Nav height fix on mobile screen

--- a/dashboard/css/dashboard-main/mobile.css
+++ b/dashboard/css/dashboard-main/mobile.css
@@ -68,6 +68,7 @@
     flex-wrap: wrap;
     align-items: stretch;
     align-content: stretch;
+	height: auto !important;
 	}
 
 	#main {
@@ -78,12 +79,13 @@
     flex-wrap: wrap;
     align-content: stretch;
 	width: 95% !important;
+	height: auto !important;
 	}
 	
 	#nav {
     padding: 3rem 2rem !important;
     width: auto !important;
-    height: 40rem !important;
+    height: auto !important;
     position: relative !important;
     overflow: hidden !important;
     margin: 0 0 -3.25rem !important;
